--- a/TP1_Introducción y estadística descriptiva.ipynb
+++ b/TP1_Introducción y estadística descriptiva.ipynb
@@ -148,12 +148,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xgCFriva2iAj",
-        "outputId": "f065d8a9-eb10-498b-95cb-c78b25988d00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        }
+        },
+        "id": "xgCFriva2iAj",
+        "outputId": "f065d8a9-eb10-498b-95cb-c78b25988d00"
       },
       "source": [
         "traffic_data = pd.read_csv(\"datasets/traffic_AR_CL_UY.csv\", usecols = [\"Fecha\", \"flow\", \"Site\", \"Device\", \"Loading\", \"Shipping\", \"Payments\", \"Review\", \"Congrats\"], parse_dates=[\"Fecha\"], index_col=[\"Fecha\"])"
@@ -1948,7 +1948,7 @@
         "id": "y8MFED948mHT"
       },
       "source": [
-        "sns.boxenplot(data=df_traffic_android[cols_etapas], orient=\"h\")"
+        "sns.boxenplot(data=df_traffic_android[cols_indices], orient=\"h\")"
       ],
       "execution_count": null,
       "outputs": []
